--- a/blog/环境的配置.md
+++ b/blog/环境的配置.md
@@ -28,3 +28,10 @@ conda create -n freqtrade python=3.12.9
 # 激活环境
 conda activate freqtrade
 ```
+
+## git 的初始化 user mail
+
+``` shell
+git config --global user.name "wurong"
+git config --global user.email "code-dream@qq.com"
+```
